projects/composablekernel/experimental/rocm_ck/tests/compile_fail/block_warps_k_not_1.cpp
// Copyright (c) Advanced Micro Devices, Inc., or its affiliates.
// SPDX-License-Identifier: MIT
//
// Must fail: block_warps.k != 1 (CShuffleEpilogue constraint).
// Expected error: "block_warps.k must be 1 (CShuffleEpilogue constraint)"

#include <rocm_ck/gemm_spec.hpp>

using namespace rocm_ck;

constexpr auto bad = make_spec(
    Signature{.dtype = DataType::FP16, .ops = {GemmOp{.lhs = "A", .rhs = "B", .out = "C"}}},
    GemmAlgorithm{{128, 128, 32}, {2, 2, 2}, {16, 16, 16}});
